--- a/templates/in.html
+++ b/templates/in.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to Dhruv's Twilio Trial</title>
+    <title>Nutrimentum</title>
+
     <style>
+    img{
+        margin: 50px 100px 20px 340px;
+
+    }
         h1,h3{
             text-align: center;
             font-family: "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;
@@ -21,12 +26,13 @@
         }
         h3
         {
-            margin-top:17%;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
-<h1>Dhruv's Message Service</h1>
+<img src="http://www.thegreatescapenc.com/wp-content/uploads/2015/07/NCFC-Food-Image.jpg"/>
+<h1>Nurtimentum Message Service</h1>
 
 <h3><a  href="/sendsms/">Send a SMS</a></h3>
 
